# js-perf-example

./: .gitignore  README.md
chat/: .dockerignore  Cargo.toml  Dockerfile  client.Dockerfile  debug.Dockerfile  inspect  package-lock.json  package.json  ready-docker  run  run_once  server.Dockerfile  stats  tsconfig.json  viz
chat/src/: chat.ts  cli.ts  client.rs  data-writer.ts  logger.ts  main.rs  server.ts  set-chat.ts  types.ts
chat/src/room/: room.ts
event-loop/: index.js
gc/: Dockerfile  tsconfig.json
gc/src/: data.json  index.ts  ring.ts
set/src/: data.json  index.js  index.ts
shooter/: .gitignore  Cargo.toml  clean  go.mod  jest.config.ts  package-lock.json  package.json  rebase  run  run-test-client  tsconfig.json  webpack.config.js
shooter/cmd/: main.go
shooter/pkg/pages/: index.go
shooter/public/views/: file.html  index.html
shooter/src/: cli.ts  logger.ts  main.rs  server.ts
shooter/src/__tests__/: integration.ts
shooter/src/game/: consts.ts  data-writer.ts  game.ts  index.ts  ticker.ts
shooter/src/game/__tests__/: game.ts
