[package]
name = "chat-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
url = "2.4.1"
